[package]
name = "htos"
version = "0.1.0"
authors = ["totsugeki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"

[build-dependencies]
cc = "1.0.67"
bindgen = "0.57.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
